--- a/signin/signin.html
+++ b/signin/signin.html
@@ -18,18 +18,18 @@
     <form action="" class="form" id="login-form">
         <h2>Signin</h2>
         <div class="input-box">
-            <input type="text" class="Username" required="required" name="username">
+            <input type="text" class="Username" required="required" name="username" value="">
             <span>Username</span>
             <i></i>
         </div>
         <div class="input-box">
-            <input type="password" class="password" required="required" name="password">
+            <input type="password" class="password" required="required" name="password" value="">
             <span>Password</span>
             <i></i>
         </div>
         <div class="links">
             <a href="#">Forgot password</a>
-            <a href="/public/signup/index.html">Sign up</a>
+            <a href="../signup/index.html">Sign up</a>
         </div>
         <div class="etc">    
             <input type="submit" value="Signin" class="Signup">
