--- a/signup/index.html
+++ b/signup/index.html
@@ -19,23 +19,23 @@
     <form action="" class="form" id="register-form">
         <h2 >Signup</h2>
         <div class="input-box">
-            <input type="text" class="Username" required="required" name="username" id="username">
+            <input type="text" class="Username" required="required" name="username" id="username" value="">
             <span>Username</span>
             <i></i>
         </div>
         <div class="input-box">
-            <input type="password" class="password" required="required" name="password" id="password">
+            <input type="password" class="password" required="required" name="password" id="password" value="">
             <span>Password</span>
             <i></i>
         </div>
         <div class="input-box">
-            <input type="password" class="repeatpassword" required="required" name="repeatpassword">
+            <input type="password" class="repeatpassword" required="required" name="repeatpassword" value="">
             <span>Repeat password</span>
             <i></i>
         </div>
         <div class="links">
             <a href="#">Forgot password</a>
-            <a href="/public/signin/signin.html">Sign in</a>
+            <a href="../signin/signin.html">Sign in</a>
         </div>
         <div class="etc">    
             <input type="submit" value="Signup" class="Signup" id="submit">
